--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_storage: ^11.4.0
   flutter:
     sdk: flutter
+  rating_dialog: ^2.0.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
