--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_storage: ^11.4.0
   flutter:
     sdk: flutter
+  image_picker: ^1.0.4
+  provider: ^6.0.5
   rating_dialog: ^2.0.4
 
 dev_dependencies:
